--- a/client/src/views/About/About.css
+++ b/client/src/views/About/About.css
@@ -1,5 +1,5 @@
 .App {
-
+    text-align: center;
 }
 
 .App-logo {
@@ -7,19 +7,14 @@
 }
 
 .App-header {
-    background-color: #A7A7A7;
+    background-color: #282c34;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-
     font-size: calc(10px + 2vmin);
     color: white;
-}
-
-.App-footer {
-    background-color:  #A7A7A7;
 }
 
 .App-link {
