--- a/client/src/views/Calendar/Calendar.css
+++ b/client/src/views/Calendar/Calendar.css
@@ -1,7 +1,7 @@
 .container {
     border-radius: 5px;
-    background-color:#f2f2f2;
-    padding: 20px;
+    background-color:rgb(190, 192, 194);
+    padding: 30px;
 }
 
 input[type=text], select, textarea {
@@ -18,7 +18,7 @@ input[type=text], select, textarea {
 input[type=submit] {
     background-color: #4CAF50;
     color: white;
-    padding: 12px 20px;
+    padding: 12px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -43,12 +43,18 @@ input[type=submit] {
 
 .column1 {
     float: left;
-	width: 50%;
+	width: 33%;
 	padding: 10px;
 }
 
 .column2 {
 	float: left;
-	width: 50%;
+	width: 33%;
 	padding: 10px;
+}
+
+.column3 {
+    float: right;
+    width: 33%;
+    padding: 10px;
 }
