--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -1,12 +1,4 @@
-.App {
-
-}
-
-.App-logo {
-    height: 40vmin;
-}
-
-.App-header {
+header {
     background-color: #A7A7A7;
     min-height: 100vh;
     display: flex;
@@ -17,11 +9,99 @@
     font-size: calc(10px + 2vmin);
     color: white;
 }
-
-.App-footer {
-    background-color:  #A7A7A7;
+.col1 {
+  float: left;
+  width: 80%;
 }
 
-.App-link {
-    color: #09d3ac;
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+#fresh-out-button {
+  display: inline-block;
+  margin-left: 80%;
+  margin-top: 20px;
+  background-color: #fff0a6;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+#fresh-out-button:hover {
+  background-color: #f5e389;
+}
+
+
+/* Dropdown Button */
+.dropbutton {
+  display: inline-block;
+  margin: auto;
+  background-color: #fff0a6;
+  border: none;
+  padding: 40px 40px;
+  text-decoration: none;
+  font-size: 28px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 100px;
+}
+
+.dropbutton:hover {
+  background-color: #f5e389;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff0a6;
+  min-width: 160px;
+  z-index: 1;
+}
+
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f5e389;
+  text-decoration: none;
+  color: black;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbutton {background-color: #f5e389;}
+
+
+
+
+/* Right Column Formatting */
+.dashCalendar {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#tasks {
+  border: 2px solid black;
 }
